perf: getCurriculum 카운트 쿼리 2개를 목록에서 직접 계산 (#40)